# agentic-project-kit

./: .gitignore  .zenodo.json  AGENTS.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  ns  ns-menu  pyproject.toml  sentinel.yaml
.agentic/: communication_artifacts.yaml  communication_state.json  compiled_agent_context.yaml  config.yaml  control_file_preservation.yaml  current_work.yaml  handoff_state.yaml  no_copy_terminal_policy.yaml  operational_handoff_state.yaml  project.yaml  rule_direct_test_plan.yaml  rule_mechanism_inventory.yaml  rule_migrations.yaml  rule_preservation.yaml  rule_test_coverage.yaml  rule_test_coverage_extra.yaml  todo.yaml  transfer_safety_rules.yaml
.github/: pull_request_template.md
docs/: DESIGN.md  DOCUMENTATION_COVERAGE.yaml  DOCUMENTATION_REGISTRY.yaml  DOC_REGISTRY_SCOPE.yaml  STATUS.md  TEST_GATES.md  WORKFLOW_OUTPUT_CYCLE.md
scripts/: bootstrap_remote_next_branchless.py  generate_agentic_kit_command_reference.py
tests/: test_absolute_path_portability_audit.py  test_access_levels.py  test_action_registry.py  test_action_specs.py  test_active_documentation_language.py  test_agent_command_envelope_fallback.py  test_agent_command_runner.py  test_agent_command_runner_summary_footer.py  test_agent_next_already_executed_idempotent.py  test_agent_next_pathspec_guard.py  test_agentic_kit_command_reference_is_current.py  test_agents_local_path_guard.py  test_architecture_contract_text.py  test_archive_superseded_docs.py  test_boot_closeout_cli.py  test_canonical_rule_source_hardening_contract.py  (+337 more)
(+1059 files in other folders)
